test/syntax/fail/not_node_in_every.sync
let g x = x

let node f =
  g 5 every true
